# tiny-json-lines

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
tests/: test_tiny_json_lines.py
tiny_json_lines/: __init__.py  core.py
