[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-json-lines"
version = "1.0.0"
description = "Tiny read/write json lines format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "raccoonette"}]

[project.urls]
Homepage = "https://github.com/MopicMP/tiny-json-lines"
